@startuml DiagramaER_MatFi_Final

!define ENTITY entity
!define ATTR(x) (x)

skinparam backgroundColor #FFFFFF
skinparam linetype ortho
skinparam DefaultFontSize 10

skinparam entity {
    BackgroundColor #E8F4F8
    BorderColor #2C5F77
    BorderThickness 2
    FontSize 11
    FontStyle bold
}

title Diagrama Entidad-Relación Completo - MatFi\n(Sincronizado con Modelo Relacional)

' ====== MÓDULO USUARIO ======
ENTITY Usuario {
    <u>id_usuario</u>
    nombre
    email
    telefono
    contraseña
}

' ====== MÓDULO NUTRICIÓN (Recetas) ======
ENTITY "Categoría Receta" as CatReceta {
    <u>id_categoria</u>
    nombre
    descripcion
}

ENTITY Receta {
    <u>id_receta</u>
    titulo
    ingredientes
    preparacion
    proteinas
    calorias_totales
}

ENTITY "Receta Favorita" as Favorito {
    <u>id_favorita</u>
    fecha_agregada
}

' Relaciones Nutrición
CatReceta ||--o{ Receta : "Clasifica"
Usuario ||--o{ Favorito : "Marca"
Receta ||--o{ Favorito : "Es marcada"

' ====== MÓDULO ENTRENAMIENTO ======
ENTITY "Nivel Entrenamiento" as Nivel {
    <u>id_nivel</u>
    nombre
}

ENTITY Rutina {
    <u>id_rutina</u>
    nombre
    duracion_estimada
}

ENTITY Entrenamiento {
    <u>id_entrenamiento</u>
    nombre
    orden
}

ENTITY Ejercicio {
    <u>id_ejercicio</u>
    nombre
    dificultad
}

ENTITY "Entrenamiento_Ejercicio" as EntEj {
    orden
    series_especificas
    repeticiones_especificas
}

ENTITY "Usuario_Rutina" as UsuRut {
    fecha_inicio
    activa
}

' Relaciones Entrenamiento
Nivel ||--o{ Rutina : "Define"
Rutina ||--o{ Entrenamiento : "Compone"
Entrenamiento ||--o{ EntEj : "Incluye"
EntEj }o--|| Ejercicio : "Referencia"
Usuario ||--o{ UsuRut : "Sigue"
Rutina ||--o{ UsuRut : "Es seguida"

' ====== MÓDULO SEGUIMIENTO Y METRICAS ======
ENTITY Objetivo {
    <u>id_objetivo</u>
    tipo (ENUM)
    valor_objetivo
    completado
}

ENTITY "Registro Agua" as RegAgua {
    <u>id_registro_agua</u>
    fecha
    cantidad_ml
}

ENTITY "Registro Entrenamiento" as RegEnt {
    <u>id_registro</u>
    fecha
    completado
}

' Relaciones Seguimiento
Usuario ||--o{ Objetivo : "Establece"
Usuario ||--o{ RegAgua : "Registra"
Usuario ||--o{ RegEnt : "Realiza"
Entrenamiento ||--o{ RegEnt : "Se registra"

@enduml
